--- a/Projects/angular_ecommerce/foodcart_backend/src/main/resources/application.properties
+++ b/Projects/angular_ecommerce/foodcart_backend/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 server.address=localhost
+server.port=8081
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
