--- a/Projects/angular_ecommerce/foodcart_backend/src/main/resources/application.properties
+++ b/Projects/angular_ecommerce/foodcart_backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=0000
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-server.address=localhost
+server.address=192.168.0.123
 server.port=8080
 
 spring.mail.host=smtp.gmail.com
