--- a/Projects/mongodb_crud/src/main/resources/application.properties
+++ b/Projects/mongodb_crud/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=Books
+server.port=8085
+server.address=192.168.0.123
